--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,3 +4,5 @@ repos:
     hooks:
     -   id: flake8
         additional_dependencies: [flake8-docstrings]
+        types: [python]
+        files: \.(py)$
