--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,8 +33,8 @@ jobs:
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # Run full linting with our configuration
-        flake8 . --count --statistics
+        # exit-zero treats all errors as warnings
+        flake8 . --count --exit-zero --statistics
     - name: Test with pytest
       run: |
         pytest
