--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: 6.1.0
     hooks:
     -   id: flake8
+        additional_dependencies: [flake8-docstrings]
         types: [python]
-        files: \.py$
+        files: \.(py)$
         exclude: ^(venv/|\.env/|\.venv/|env/)
