--- a/.env-example
+++ b/.env-example
@@ -1,32 +1,25 @@
-# ShareWood.tv URLs
-# Main website URL
+# This file is used to set up environment variables for the Sharewood application.
+# It contains sensitive information such as API keys, URLs, and user credentials.
+# Ensure this file is not shared publicly or committed to version control.
+# The values here are placeholders and should be replaced with actual values.
+# Please ensure to replace the placeholder values with actual credentials and paths.
+# 
+# Sharewood application configuration
 SHAREWOOD_URL="https://www.sharewood.tv"
-
-# Login page URL
 SHAREWOOD_LOGIN_URL="https://www.sharewood.tv/login"
-
-# Logout page URL
 SHAREWOOD_LOGOUT_URL="https://www.sharewood.tv/logout"
-
-# Torrents search page URL
 SHAREWOOD_TORRENTS_URL="https://www.sharewood.tv/torrents"
-
-# API endpoint for ShareWood.tv
-# Not needed yet
 SHAREWOOD_API_URL="https://www.sharewood.tv/api/"
-
-# Your unique passkey for the torrent tracker
-# This is used to identify your account when downloading torrents
-# Not needed yet
-SHAREWOOD_PASSKEY="your_passkey_here" 
-
-# ShareWood.tv account credentials
-# Your username for logging into ShareWood.tv
-PSEUDO="your_username"
-
-# Your password for logging into ShareWood.tv
-PASSWORD="your_password"
-
-# Path where downloaded torrent files will be saved
-# Default path shown below, modify as needed
+SHAREWOOD_PASSKEY="82eacd22bbde0c5231a318543158494e"
+# 
+# Selenium browser configuration
+# - Timeout in seconds
+BROWSER_TIMEOUT=60
+BROWSER_WAIT_TIMEOUT=60
+# 
+# Sharewood user credentials
+PSEUDO="username"
+PASSWORD="password"
+# 
+# Path to downloads directory
 DOWNLOAD_PATH="~/Downloads/Sharewood"
