--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+# Core dependencies for ShareWoodAutomator
 selenium>=4.0.0
 beautifulsoup4>=4.10.0
 python-dotenv>=0.19.0
 lxml>=4.6.0
 urllib3>=1.26.0
 webdriver-manager>=3.5.0
+requests>=2.25.0
